# flutter_jscore

./: README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/friday/flutter_jscore/: FlutterJscorePlugin.java
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/friday/flutter_jscore_example/: MainActivity.java
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_jscore.podspec
jscore/jsc/: CMakeLists.txt  afc_test.cpp  bridge.cpp  bridge.h  bridge_jsc.cpp  bridge_jsc.h  tempCodeRunnerFile
jscore/jsc/JavaScriptCore/: JSContext.h  JSContextRef.h  JSManagedValue.h  JSObjectRef.h  JSTypedArray.h  JSValueRef.h
jscore/jsc/log/: jsc_log.h
lib/: flutter_jscore.dart
